2009-11-20  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (x_default_font_parameter): Call xsettings_get_system_font.

	* xsettings.h: Declare xsettings_get_system_font.

	* xsettings.c (xsettings_get_system_font): New function.
	(init_gconf): No use initiating gconf unless we have Xft also.
	(syms_of_xsettings): Only provide system-font-setting if HAVE_XFT and
	HAVE_GCONF.

	* gtkutil.c (xg_modify_menubar_widgets): If menubar is totally empty
	add a blank entry so it doesn't collapse into nothing.

2009-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (Funintern): Comment out last change.

2009-11-19  Richard Stallman  <rms@gnu.org>

	* lread.c (Funintern): Error if symbol is t or nil.

2009-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* insdel.c (make_gap_larger): Don't make as many assumptions about the
	representation of Lisp integers.
	Reported by MJ Chan <mjchan.inbox@gmail.com>.

2009-11-17  Andreas Schwab  <schwab@linux-m68k.org>

	* lisp.h: Remove declaration of Ffont_get_system_font.
	* xfns.c: Move include of "xsettings.h".
	* xsettings.h: Use EXFUN to declare Ffont_get_system_font.

2009-11-17  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (something_changedCB, Ffont_get_system_font):
	Check use_system_font.
	(syms_of_xsettings): DEFVAR font-use-system-font.

2009-11-17  Andreas Schwab  <schwab@linux-m68k.org>

	* xfns.c (x_default_font_parameter): Remove dead assignment.

	* lisp.h (Fbyteorder, init_font, Ffont_get_system_font): Declare.

2009-11-17  Jan Djärv  <jan.h.d@swipnet.se>

	* xftfont.c (xftfont_fix_match): Older versions of fontconfig do
	not have FC_LCD_*.  #define them if not there.

	* xsettings.c (parse_xft_settings, apply_xft_settings): Ditto.

	* xterm.h (struct x_display_info): Add atoms and Window for xsettings.

	* xterm.c (handle_one_xevent): Call xft_settings_event for
	ClientMessage, PropertyNotify and DestroyNotify.
	(x_term_init): If we have XFT, get DPI from Xft.dpi.
	Call xsettings_initialize.
